--- a/regression/salary.ipynb
+++ b/regression/salary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "29             10.5  121872.0"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "4              2.2  39891.0"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "29             10.5  121872.0"
       ]
      },
-     "execution_count": 436,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "(30, 2)"
       ]
      },
-     "execution_count": 438,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 439,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "29             10.5"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "Text(0.5, 1.0, 'scatter plot')"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "12              4.0"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 444,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        "17              5.3"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        "        76386.77615802])"
       ]
      },
-     "execution_count": 447,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "Text(0.5, 1.0, 'regression line')"
       ]
      },
-     "execution_count": 450,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual value</th>\n",
+       "      <th>predicted value</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37731.0</td>\n",
+       "      <td>40817.783270</td>\n",
+       "      <td>-3086.783270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>122391.0</td>\n",
+       "      <td>123188.082589</td>\n",
+       "      <td>-797.082589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>57081.0</td>\n",
+       "      <td>65154.462615</td>\n",
+       "      <td>-8073.462615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>63218.0</td>\n",
+       "      <td>63282.410357</td>\n",
+       "      <td>-64.410357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>116969.0</td>\n",
+       "      <td>115699.873560</td>\n",
+       "      <td>1269.126440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>109431.0</td>\n",
+       "      <td>108211.664531</td>\n",
+       "      <td>1219.335469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>112635.0</td>\n",
+       "      <td>116635.899689</td>\n",
+       "      <td>-4000.899689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>55794.0</td>\n",
+       "      <td>64218.436486</td>\n",
+       "      <td>-8424.436486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>83088.0</td>\n",
+       "      <td>76386.776158</td>\n",
+       "      <td>6701.223842</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    actual value  predicted value   difference\n",
+       "2        37731.0     40817.783270 -3086.783270\n",
+       "28      122391.0    123188.082589  -797.082589\n",
+       "13       57081.0     65154.462615 -8073.462615\n",
+       "10       63218.0     63282.410357   -64.410357\n",
+       "26      116969.0    115699.873560  1269.126440\n",
+       "24      109431.0    108211.664531  1219.335469\n",
+       "27      112635.0    116635.899689 -4000.899689\n",
+       "11       55794.0     64218.436486 -8424.436486\n",
+       "17       83088.0     76386.776158  6701.223842"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1=pd.DataFrame({'actual value':y_test,'predicted value':y_pred,'difference':y_test-y_pred})\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1321,7 @@
        "3737.417861878896"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1344,7 @@
        "0.057770876996291826"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1366,7 @@
        "23370078.800832972"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1388,7 @@
        "4834.260936361728"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1410,7 @@
        "0.9740993407213511"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
