--- a/regression/person.ipynb
+++ b/regression/person.ipynb
@@ -876,11 +876,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[63.44226555]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\SHYAMA S\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(model.predict([[57.5,65.8]]))"
+    "print(model.predict([[57.5]]))"
    ]
   },
   {
